--- a/app/app/src/main/res/values/strings.xml
+++ b/app/app/src/main/res/values/strings.xml
@@ -6,6 +6,8 @@
 
     <string name="action_settings">Settings</string>
 
+    <string name="checkbox">Entwicklungsmodus</string>
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
